# AAA

./: .antigravityignore  .env.example  .gitignore  .pre-commit-config.yaml  README.md  REFACTORING.md  TODO.md  ecosystem.config.cjs  opencode.json  package-lock.json  package.json  pyproject.toml  research.json  research_nodes.json  run_backend.bat  run_frontend.sh  run_mcp.bat  skills-lock.json  test_endpoint.py
artifacts/: test_collision.py
backend/: config.py  config.yaml  config_schema.py  main.py  mcp_server.py
backend/api/: __init__.py  deps.py  exceptions.py  helpers.py  router.py  routes.py  schemas.py
backend/app_factory/: __init__.py
backend/bootstrap/: __init__.py  background.py  embedder.py  lifecycle.py  modules.py  pipeline.py  providers.py  repositories.py
backend/core/: __init__.py  app_state.py  consolidation.py  context.py  daemon.py  dream_context.py  dream_executor.py  dream_prompts.py  mass_decay.py  pipeline.py  registry.py  scheduler.py  sedimentation.py
backend/metabolisation/: __init__.py  bifurcation.py  consolidation.py  daemon.py  daemon_trigger_signal.py  dream_context.py  dream_executor.py  dream_prompts.py  dream_research.py  mass_decay.py  pipeline.py  research_metabolism.py  scheduler.py  sedimentation.py  skill_metabolism.py
backend/modules/: __init__.py  base.py  belief_engine.py  belief_math.py  commitment_store.py  consolidation_checkpoint.py  context_collector.py  conversation_metrics.py  diffractive_retrieval.py  digester.py  embedder.py  expertise_engine.py  homeostatic_regulator.py  llm_client.py  perception.py  perception_prompts.py  rhizome_web_probe.py  sedimentation_retrieval.py  skill_activator.py  skill_workshop.py  (+3 more)
docs/: ARCHITECTURE.md  BACKEND_BEST_PRACTICES.md  CONFIG.md  DREAM_DAEMON.md  FRONTEND_DESIGN_PRINCIPLES.md  IMPLEMENTATION_DYNAMIC_PERSONALITY.md  Implementation.md  MCP_SERVER.md  PHILOSOPHY.md  README.md  REFACTORING_PLAN.md  SCAFFOLDING_AND_DEVELOPMENT_RULES.md  SETUP.md  SKILL_SYSTEM.md  TDD.md  TODO.md  VECTOR_SYSTEMS.md  conv.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
scripts/: backup_db.py  pm2.sh  porter.py  run_all.bat  run_all.sh  run_backend.bat  run_backend.sh  run_frontend.bat  run_frontend.sh  run_mcp.bat  run_mcp.sh  setup.bat  setup.sh  test_research_api.py
(+643 files in other folders)
