[project]
name = "aaa"
version = "0.1.0"
description = "Autopoietic Agentic Assemblage"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "httpx>=0.27",
    "sentence-transformers>=2.7",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "python-multipart>=0.0.29",
    "pdfplumber>=0.11.9",
    "python-docx>=1.2.0",
    "mcp",
    "EbookLib>=0.20",
    "mobi>=0.4.1",
    "crawl4ai>=0.8.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.9.0",
]
lint = ["ruff>=0.9.0"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["backend/tests"]

[tool.ruff]
line-length = 120
target-version = "py311"
exclude = [
    ".venv",
    ".git",
    "__pycache__",
    "node_modules",
]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "SIM",   # flake8-simplify
    "UP",    # pyupgrade
]
ignore = [
    "E501",  # line-too-long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "C408",  # unnecessary (dict/list/tuple) call — project style
    "SIM401",  # sqlite3.Row objects don't support .get()
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint.isort]
known-first-party = ["backend"]

